--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
     <meta charset="utf-8">
-    <h1>
-        <title><a herf="index.html" target="_self">My Story</a></title>
-    </h1>
+
     <head>
-        About Me
-    </head>
-    <body>
+        <h1>
+            <a href="index.html" target="_self">My Story</a>
+        </h1>
         <ul>
-            <li><a href="index.html" target="_self">홈</a></li>
             <li><a href="AboutMe.html" target="_self">나에 대해서</a></li>
             <li><a href="MyGoal.html" target="_self">목표</a></li>
             <li><a href="Other.html" target="_self">기타</a></li>
         </ul>
+    </head>
+    <body>
+
         <br>
         <br>
         <h2>
