--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!doctype html>
 <html>
     <meta charset="utf-8">
-    <h1>
-        <title><a herf="index.html" target="_self">My Story</a></title>
-    </h1>
+
     <head>
-        My Story
-    </head>
-    <body>
+        <h1>
+            <a href="index.html" target="_self">My Story</a>
+        </h1>
         <ul>
-            <li><a href="index.html" target="_self">홈</a></li>
             <li><a href="AboutMe.html" target="_self">나에 대해서</a></li>
             <li><a href="MyGoal.html" target="_self">목표</a></li>
             <li><a href="Other.html" target="_self">기타</a></li>
         </ul>
+    </head>
+    <body>
         <br>
         <br>
         <p>
@@ -29,7 +28,7 @@
             <img src="iOther.jpg" width = "300">
         </a>
         <p>
-            목차를 통하여 각 항목의 주소로 이동 할 수 있으며 홈을 통해 현제 페이지로 돌아올 수 있다.
+            목차를 통하여 각 항목의 주소로 이동 할 수 있으며 상단의 My Story를 통해 현제 페이지로 돌아올 수 있다.
         </p>
     </body>
 </html>
