--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
-    <meta charset="utf-8">
     <head>
+        <meta charset="utf-8">
+        <title>index</title>
         <h1>
             <a href="index.html" target="_self">My Story</a>
         </h1>
