--- a/Other.html
+++ b/Other.html
@@ -27,7 +27,7 @@
             <img src="unity.png" width="30%">
         </a>
         <p>
-            현제 C/C++/C#/Web/을 공부하고 있으며 이 후로 다루고 싶거나 공부 할 예정인 것으로는 유니티 엔진/언리얼 엔진/자바/파이선 등이 있다<br>
+            현제 <strong>C/C++/C#/Web/</strong>을 공부하고 있으며 이 후로 다루고 싶거나 공부 할 예정인 것으로는 유니티 엔진/언리얼 엔진/자바/파이선 등이 있다<br>
             유니티 엔진과 언리얼 엔진을 더 잘 다룰 수 있기 위해 C/C++/C# 개열을 우선적으로 공부 하고 있으며 자바 파이선 역시 주로 사용되기 때문에<br>
             공부 할 예정이다.
         </p>
