--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="iOther.jpg" width = "300">
         </a>
         <p>
-            목차를 통하여 각 항목의 주소로 이동 할 수 있으며 상단의 My Story를 통해 현제 페이지로 돌아올 수 있다.
+            목차를 통하여 각 항목의 주소로 이동 할 수 있으며 상단의 <strong>My Story</strong>를 통해 현제 페이지로 돌아올 수 있다.
         </p>
     </body>
 </html>
