--- a/MyGoal.html
+++ b/MyGoal.html
@@ -20,14 +20,14 @@
                 내가 추구하는 목표
             </h2>
         </p>
-        <a herf = "https://en.cppreference.com/w/" target = "_blank"> src="C.jpg" width = "30%"></a>
+        <a herf = "https://en.cppreference.com/w/" target = "_blank"> <img src="C.jpg" width = "30%"></a>
         <p>
             게임이라는 것은 언제나 나에게 재미와 활력을 불어넣어주는 친구였다.<br>
             게임은 나에게 일상과 다른 많은 것들을 보고 느끼게 해주었고 나라는 사람이 만들어 지는데 큰 기어를 했다<br>
             그래서 나는 더 많은 경험과 감정을 느끼게 해주는 게임을 만들기를 추구한다.<br>
             나 뿐만이 아니라 더 많은 사람들이 더 즐겁게 즐길 수 있는 게임을 만들기 위해
         </p>
-        <a herf = "https://www.capcom.com/" target = "_blank"> src="MHW.jpg" width = "30%"></a>
+        <a herf = "https://www.capcom.com/" target = "_blank"> <img src="MHW.jpg" width = "30%"></a>
         <a herf = "https://www.fromsoftware.jp/jp/" target = "_blank"> src="ELDENRING.jpg" width = "30%"></a>
         <p>
             게임개발자로서 목표 하는 기업은 닌텐도/캡콤/프롬소프트웨어/와 같은 온라인 보다는 콘솔 위주의 게임을 제작하는 회사이며<br>
