--- a/MyGoal.html
+++ b/MyGoal.html
@@ -28,7 +28,7 @@
             나 뿐만이 아니라 더 많은 사람들이 더 즐겁게 즐길 수 있는 게임을 만들기 위해
         </p>
         <a herf = "https://www.capcom.com/" target = "_blank"> <img src="MHW.jpg" width = "30%"></a>
-        <a herf = "https://www.fromsoftware.jp/jp/" target = "_blank"> src="ELDENRING.jpg" width = "30%"></a>
+        <a herf = "https://www.fromsoftware.jp/jp/" target = "_blank"> <imt src="ELDENRING.jpg" width = "30%"></a>
         <p>
             게임개발자로서 목표 하는 기업은 닌텐도/캡콤/프롬소프트웨어/와 같은 온라인 보다는 콘솔 위주의 게임을 제작하는 회사이며<br>
             취업과는 별개로 유니티를 이용하여 개인 제작 게임을 만드는것도 목표로 두고 있다
