--- a/MyGoal.html
+++ b/MyGoal.html
@@ -33,7 +33,7 @@
             <img src="MHW.jpg" width = "30%">
         </a>
         <a href = "https://www.fromsoftware.jp/jp/" target = "_blank">
-            <imt src="ELDENRING.jpg" width = "30%">
+            <img src="ELDENRING.jpg" width = "30%">
         </a>
         <p>
             게임개발자로서 목표 하는 기업은 닌텐도/캡콤/프롬소프트웨어/와 같은 온라인 보다는 콘솔 위주의 게임을 제작하는 회사이며<br>
